<resources>
    <string name="app_name">MegAlexa</string>
    <string name="logo_description">Amazon Alexa\'s logo</string>
    <string name="version">Version 1.0</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="alexa" translatable="false">A L E X A</string>
    <string name="email" translatable="false">e-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="go">Go</string>
    <string name="last_access">Last access:</string>
    <string name="password_minimum">Password must contain at least 10 characters</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Password is not valid</string>
    <string name="error_connection_text">Your internet connection may be down or there could be problems in AWS\'s servers.</string>
    <string name="error_connection">Connection error</string>
    <string name="congratulations">Congratulations!</string>
    <string name="back_to_home">Back to home page</string>
    <string name="title_activity_workflow">Workflow</string>
    <string name="no_access">No recent access</string>
    <string name="delete">Delete</string>
    <string name="new_workflow">New workflow</string>
    <string name="enter_wf_name">Enter the name of the Workflow</string>
    <string name="ok">ok</string>
    <string name="test">test</string>
    <string name="set_wf">SET</string>
    <string name="mywf_placeholder">my workflow</string>
</resources>
