<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="14dp">
    <TextView
        android:id="@+id/lbl_your_name"
        android:text="@string/enter_wf_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"/>
    <EditText
        android:id="@+id/txt_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="12"
        android:imeOptions="actionDone"
        android:autofillHints="@string/mywf_placeholder"/>

    <Button
        android:id="@+id/ok_nome"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center"/>

</LinearLayout>