<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:minHeight="164dp">

    <android.support.constraint.Guideline android:layout_width="0dp"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          app:layout_constraintGuide_percent="0.25"
                                          android:orientation="horizontal"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/logo"
            android:id="@+id/logoAlexa"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" android:scaleType="fitCenter"
    />
    <TextView
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/versioneApp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textColor="@color/colorPrimary"/>
    <Button
            android:text="@string/login"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:drawableStart="@drawable/user_go"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_chainStyle="packed" android:onClick="loginAction"
    />
    <Button
            android:text="@string/register"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:drawableStart="@drawable/register"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintBottom_toTopOf="@+id/versioneApp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="registerAction"/>

    <Button
        android:id="@+id/testButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/register"
        android:onClick="test"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/versioneApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.291" />
    <TextView
            android:text="@string/alexa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alexaNome" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary" android:textSize="24sp" android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>